--- a/src/styles/Toggle.less
+++ b/src/styles/Toggle.less
@@ -78,7 +78,8 @@
 
     span {
       background-color: #5abc52;
-      padding: 2px;
+      padding-right: 2px;
+      padding-left: 2px;
       color: #63775b;
     }
   }
