--- a/src/styles/Timetable.less
+++ b/src/styles/Timetable.less
@@ -20,6 +20,9 @@
   .day {
     padding: 4px 8px;
     background-color: #ebf8ff;
+    background-color: #fff;
+    font-weight: 500;
+    padding-top: 16px;
     border-bottom: 1px solid #82bbff;
   }
 
