--- a/src/styles/Timetable.less
+++ b/src/styles/Timetable.less
@@ -76,6 +76,7 @@
   }
 }
 
+/*
 .TimetableColumn:hover, .TimetableColumn.active:hover {
   background-color: white;
 
@@ -91,6 +92,7 @@
     background-color: #d0d0d0;
   }
 }
+*/
 
 .TimetableColumn {
   .backdrop {
