--- a/src/styles/Timetable.less
+++ b/src/styles/Timetable.less
@@ -103,3 +103,26 @@
 .guideline {
   border-top: 1px dotted #82bbff;
 }
+
+.TimetableRowHeadCell {
+  display: flex;
+  flex-direction: row;
+
+  time {
+    flex: 1;
+  }
+
+  label {
+    font-weight: 500;
+    flex: 1;
+    text-align: center;
+  }
+
+  .ProgressBar {
+    flex: 2;
+  }
+
+  .hidden {
+    visibility: hidden;
+  }
+}
