toggle triple state

--- a/src/styles/ProgressBar.less
+++ b/src/styles/ProgressBar.less
@@ -19,9 +19,19 @@
 
   .bar {
     display: block;
+    background-color: #b8e4e6;
+    border-radius: 4px;
+    height: 18px;
+    transition: width 0.3s ease-in-out;
+  }
+
+  .bar2 {
+    display: block;
     background-color: #5bc5c9;
     border-radius: 4px;
     height: 18px;
     transition: width 0.3s ease-in-out;
+    position: absolute;
+    top: 0;
   }
 }
