--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,3 +5,16 @@ body {
 
 .App {
 }
+
+#firebaseui-auth-container {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: white;
+    text-align: center;
+    padding-top: 100px;
+    box-sizing: border-box;
+}
